<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/main_butom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/tab_default"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/main_home"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/home_inco"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/tab_home_imag" />
                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tab_home"
                    android:textColor="@drawable/tab_text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_recommed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/recommed_inco"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/tab_recommed_imag" />
                <TextView
                    android:id="@+id/recommed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tab_recommed"
                    android:textColor="@drawable/tab_text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_record"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/record_inco"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/tab_record_imag" />
                <TextView
                    android:id="@+id/record_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tab_record"
                    android:textColor="@drawable/tab_text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_message"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/message_inco"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/tab_message_imag" />
                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tab_message"
                    android:textColor="@drawable/tab_text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_set"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/set_inco"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/tab_setting_imag" />
                <TextView
                    android:id="@+id/set_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tab_setting"
                    android:textColor="@drawable/tab_text_color"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_above="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>
</RelativeLayout>